# catchThemAll

./: LICENSE  Main.hs  README.md  catch-them-all.cabal  haisheng.hs  minimal.json  movers.json  parser.py  run.sh
