cabal-version:       >=1.10
name:                catchThemAll
version:             0.1.0.0
license-file:        LICENSE
author:              Haisheng Wu, ChakPongChung
-- maintainer:          
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable catchthemall
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13
                     , aeson
                     , text
                     , directory
  -- hs-source-dirs:
  default-language:    Haskell2010
  ghc-options: -Wall
